azure-pipelines/infra/k8s/generated/backend/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-stable
  namespace: task-api
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-canary
  namespace: task-api
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
